--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section id="calc">
-        <div id="text-area">aqui estara a conta</div>
+        <div id="text-area"><i id="texto"></i><span id="pisca">_</span></div>
         <i class="input">1</i>
         <i class="input">2</i>
         <i class="input">3</i>
