--- a/index.html
+++ b/index.html
@@ -9,22 +9,47 @@
 </head>
 <body>
     <section id="calc">
-        <div id="text-area"><i id="texto"></i><span id="pisca">_</span></div>
-        <i class="input">1</i>
-        <i class="input">2</i>
-        <i class="input">3</i>
-        <i class="input">/</i>
-        <i class="input">4</i>
-        <i class="input">5</i>
-        <i class="input">6</i>
-        <i class="input">x</i>
-        <i class="input">7</i>
-        <i class="input">8</i>
-        <i class="input">9</i>
-        <i class="input">-</i>
-        <i class="input" id="zero">0</i>
-        <i id="igual">=</i>
-        <i class="input">+</i>
+        <div id="text-area"><i id="texto">0</i></div>
+        <div id="bnts">
+            <i class="input">1</i>
+            <i class="input">2</i>
+            <i class="input">3</i>
+            <i class="input op">
+                <svg width="40%" height="48" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                    <rect x="0" y="10" width="4" height="16" rx="2" fill="currentColor" style="transform: rotate(-35deg);"/>
+                </svg>
+            </i>
+            <i class="input">4</i>
+            <i class="input">5</i>
+            <i class="input">6</i>
+            <i class="input op">
+                <svg width="40%" height="48" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" style="transform:rotate(45deg);">
+                    <rect x="10" y="4" width="4" height="16" rx="2" fill="currentColor"/>
+                    <rect x="4" y="10" width="16" height="4" rx="2" fill="currentColor"/>
+                </svg>
+            </i>
+            <i class="input">7</i>
+            <i class="input">8</i>
+            <i class="input">9</i>
+            <i class="input op">
+                <svg width="40%" height="48" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                    <rect x="4" y="10" width="16" height="4" rx="2" fill="currentColor"/>
+                </svg>
+            </i>
+            <i class="input" id="zero">0</i>
+            <i class="op" id="igual">
+                <svg width="40%" height="48" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                    <rect x="4" y="7" width="16" height="4" rx="2" fill="currentColor"/>
+                    <rect x="4" y="15" width="16" height="4" rx="2" fill="currentColor"/>
+                </svg>
+            </i>
+            <i class="input op">
+                <svg width="40%" height="48" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                    <rect x="10" y="4" width="4" height="16" rx="2" fill="currentColor"/>
+                    <rect x="4" y="10" width="16" height="4" rx="2" fill="currentColor"/>
+                </svg>
+            </i>    
+        </div>
     </section>
 </body>
 </html>
