--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <title>Document</title>
 </head>
 <body>
+    <i id="night">
+        <svg width="200" height="200" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+            
+            <!-- Lua clara -->
+            <circle cx="60" cy="50" r="22" fill="#fff9d9" />
+            
+            <!-- Sombra para formar o crescente -->
+            <circle cx="70" cy="50" r="22" fill="#1c1a22" />
+        </svg>
+    </i>
+
     <section id="calc">
         <div id="text-area"><i id="texto">0</i></div>
         <div id="bnts">
